--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-mysql-restapi",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
