--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "https": "^1.0.0",
     "mysql2": "^3.11.3"
   },
   "devDependencies": {
